--- a/package.json
+++ b/package.json
@@ -2,22 +2,33 @@
   "name": "notset",
   "version": "1.0.0",
   "devDependencies": {
-    "autoprefixer": "^6.7.7",
-    "babel-preset-es2015": "^6.24.1",
-    "grunt": "~1.0.1",
-    "grunt-babel": "^6.0.0",
-    "grunt-browser-sync": "^2.2.0",
-    "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-uglify": "~3.0.1",
-    "grunt-contrib-watch": "~1.0.0",
-    "grunt-postcss": "^0.8.0",
-    "grunt-sass": "^2.0.0"
+    "autoprefixer": "^7.1.1",
+    "babel-preset-es2015": "*",
+    "grunt": "*",
+    "grunt-babel": "*",
+    "grunt-browser-sync": "*",
+    "grunt-contrib-concat": "*",
+    "grunt-contrib-uglify": "^3.0.1",
+    "grunt-contrib-watch": "*",
+    "grunt-postcss": "*",
+    "grunt-sass": "*"
   },
   "repository": {
     "type": "git"
   },
   "author": "Andrew Hill",
   "dependencies": {
-    "postcss-clean": "^1.0.2"
+    "babel-core": "^6.25.0",
+    "browser-sync": "^2.18.12",
+    "debug": "^2.6.8",
+    "globals": "^9.18.0",
+    "globule": "^1.2.0",
+    "iconv-lite": "^0.4.18",
+    "minimatch": "^3.0.4",
+    "node-sass": "^4.5.3",
+    "postcss-clean": "^1.0.2",
+    "regenerator-runtime": "^0.10.5",
+    "to-fast-properties": "^1.0.3",
+    "which": "^1.2.14"
   }
 }
